# ch-odbc-alternative

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build_release_package.bat  clickhouse_odbc.sln  clickhouse_odbc.vcxproj  clickhouse_odbc_test.vcxproj
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MSACCESS_COMPATIBILITY.md  ROADMAP.md
installer/: clickhouse_odbc_installer.vcxproj  installer.cpp  installer.rc  resource.h
setup/: README_SETUP.txt  create_dsn.bat  register_driver.bat  remove_dsn.bat  setup.inf  unregister_driver.bat
src/: CMakeLists.txt  catalog.cpp  clickhouse_client.cpp  clickhouse_odbc.cpp  clickhouse_odbc.def  clickhouse_odbc.rc  config_dsn.cpp  connection.cpp  descriptor.cpp  dllmain.cpp  handle.cpp  info.cpp  resource.h  result.cpp  statement.cpp  trace.cpp  type_mapping.cpp  util.cpp
src/include/: clickhouse_client.h  handle.h  trace.h  type_mapping.h  util.h
test/: enable_trace.ps1  test_access_workflow.cpp  test_framework.h  test_handle.cpp  test_main.cpp  test_odbc_api.cpp  test_odbc_handle.cpp  test_phase10.cpp  test_phase11.cpp  test_phase12.cpp  test_phase13.cpp  test_phase14.cpp  test_phase15.cpp  test_phase16.cpp  test_phase17.cpp  test_phase18.cpp  test_phase19.cpp  test_phase2.cpp  test_phase20.cpp  test_phase21.cpp  test_phase3.cpp  test_phase4.cpp  test_phase5.cpp  test_phase5b.cpp  test_phase6.cpp  test_phase7.cpp  test_phase8.cpp  test_phase9.cpp  test_type_mapping.cpp  test_util.cpp
